fix: removing overflow

--- a/src/components/CategoryItem/CategoryItem.module.scss
+++ b/src/components/CategoryItem/CategoryItem.module.scss
@@ -124,15 +124,18 @@
   @media screen and (max-width: 1024px) {
     .image {
       height: fit-content;
+
       img {
         width: 150px;
       }
     }
-  }
 
-  @media screen and (max-width: 1024px) {
     .monthly {
       font-size: 16px;
+    }
+
+    .cart {
+      bottom: 0em;
     }
   }
 
